Updated with datasource_network link

--- a/website/infoblox.erb
+++ b/website/infoblox.erb
@@ -37,6 +37,13 @@
           </li>
         </ul>
         </li>
+        <li>
+        <a href="#">Datasource</a>
+        <ul class="nav nav-visible">
+          <li>
+            <a href="/docs/providers/infoblox/d/network.html.markdown">infoblox_network</a>
+          </li>
+        </ul>
       </ul>
     </div>
   <% end %>
