Updated the link

--- a/website/infoblox.erb
+++ b/website/infoblox.erb
@@ -41,7 +41,7 @@
         <a href="#">Datasource</a>
         <ul class="nav nav-visible">
           <li>
-            <a href="/docs/providers/infoblox/d/network.html.markdown">infoblox_network</a>
+            <a href="/docs/providers/infoblox/d/network.html">infoblox_network</a>
           </li>
         </ul>
       </ul>
